--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /private/
 /bin/
 /gen/
+/ant.properties
+/build.properties
+/default.properties
+/project.properties
+/.idea/
+/proguard-project.txt
+/ceylon_steel.iml
