--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,7 +59,8 @@
         </activity>
         <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details">
         </activity>
-        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape">
+        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape"
+                  android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
         </activity>
     </application>
 </manifest>
