--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <application android:label="@string/app_name" android:icon="@drawable/icon" android:screenOrientation="portrait" android:theme="@android:style/Theme.Light">
+    <application android:label="@string/app_name" android:icon="@drawable/icon" android:screenOrientation="portrait"
+                 android:theme="@android:style/Theme.Holo.Light">
         <service android:name=".service.Tracker"/>
         <activity android:name=".activity.StartingActivity" android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -59,8 +60,7 @@
         </activity>
         <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details">
         </activity>
-        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape"
-                  android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
+        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape">
         </activity>
     </application>
 </manifest>
