added daily invoice report

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,5 +62,7 @@
         </activity>
         <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape">
         </activity>
+        <activity android:name=".activity.payment.DailyReportActivity" android:label="Daily Report" android:screenOrientation="landscape">
+        </activity>
     </application>
 </manifest>
