--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon" android:screenOrientation="portrait"
                  android:theme="@android:style/Theme.Holo.Light">
-        <service android:name=".service.Tracker"/>
+        <service android:name=".util.Tracker"/>
         <activity android:name=".activity.StartingActivity" android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
