--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <application android:label="@string/app_name" android:icon="@drawable/icon" android:screenOrientation="portrait"
-                 android:theme="@android:style/Theme.Holo.Light">
+    <application android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@android:style/Theme.Holo.Light">
         <service android:name=".util.Tracker"/>
         <activity android:name=".activity.StartingActivity" android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -16,49 +15,62 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" android:label="Sign In to Sales Pad">
+        <activity android:name=".activity.LoginActivity" android:label="Sign In to Sales Pad" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.HomeActivity" android:label="Home">
+        <activity android:name=".activity.HomeActivity" android:label="Home" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.attendance.AttendanceActivity" android:label="Attendance">
+        <activity android:name=".activity.attendance.AttendanceActivity" android:label="Attendance" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.MakeSalesOrderActivity" android:label="Make Sales Orders">
+        <activity android:name=".activity.make_sales_order.MakeSalesOrderActivity" android:label="Make Sales Orders" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.ViewSalesOrderActivity" android:label="View Sales Orders">
+        <activity android:name=".activity.view_sales_order.ViewSalesOrderActivity" android:label="View Sales Orders" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.unproductive_call.UnProductiveCallActivity" android:label="Un Productive Call">
+        <activity android:name=".activity.unproductive_call.UnProductiveCallActivity" android:label="Un Productive Call" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.unproductive_call.MakeUnProductiveCallActivity" android:label="Make Un Productive Call">
+        <activity android:name=".activity.unproductive_call.MakeUnProductiveCallActivity" android:label="Make Un Productive Call"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.unproductive_call.MadeUnProductiveCallActivity" android:label="Select Un Productive Call">
+        <activity android:name=".activity.unproductive_call.MadeUnProductiveCallActivity" android:label="Select Un Productive Call"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.unproductive_call.ViewUnProductiveCallActivity" android:label="View Un Productive Call">
+        <activity android:name=".activity.unproductive_call.ViewUnProductiveCallActivity" android:label="View Un Productive Call"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.MakeConsignmentSalesOrderActivity" android:label="Make Consignment Sales Order">
+        <activity android:name=".activity.make_sales_order.MakeConsignmentSalesOrderActivity" android:label="Make Consignment Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.MakeDirectSalesOrderActivity" android:label="Make Direct Sales Order">
+        <activity android:name=".activity.make_sales_order.MakeDirectSalesOrderActivity" android:label="Make Direct Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.MakeProjectSalesOrderActivity" android:label="Make Project Sales Order">
+        <activity android:name=".activity.make_sales_order.MakeProjectSalesOrderActivity" android:label="Make Project Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.MakeDirectProjectSalesOrderActivity" android:label="Make Direct Project Sales Order">
+        <activity android:name=".activity.make_sales_order.MakeDirectProjectSalesOrderActivity" android:label="Make Direct Project Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.MadeConsignmentSalesOrderActivity" android:label="Select Consignment Sales Order">
+        <activity android:name=".activity.view_sales_order.MadeConsignmentSalesOrderActivity" android:label="Select Consignment Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.MadeDirectSalesOrderActivity" android:label="Select Direct Sales Order">
+        <activity android:name=".activity.view_sales_order.MadeDirectSalesOrderActivity" android:label="Select Direct Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.MadeProjectSalesOrderActivity" android:label="Select Project Sales Order">
+        <activity android:name=".activity.view_sales_order.MadeProjectSalesOrderActivity" android:label="Select Project Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.ViewConsignmentSalesOrderActivity" android:label="View Consignment Sales Order">
+        <activity android:name=".activity.view_sales_order.ViewConsignmentSalesOrderActivity" android:label="View Consignment Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.ViewDirectSalesOrderActivity" android:label="View Direct Sales Order">
+        <activity android:name=".activity.view_sales_order.ViewDirectSalesOrderActivity" android:label="View Direct Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.ViewProjectSalesOrderActivity" android:label="View Project Sales Order">
+        <activity android:name=".activity.view_sales_order.ViewProjectSalesOrderActivity" android:label="View Project Sales Order"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.SelectCategoryActivity" android:label="Select Items">
+        <activity android:name=".activity.make_sales_order.SelectCategoryActivity" android:label="Select Items" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.make_sales_order.EnterItemDetailActivity" android:label="Enter Item Details">
+        <activity android:name=".activity.make_sales_order.EnterItemDetailActivity" android:label="Enter Item Details" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details">
+        <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details" android:screenOrientation="portrait">
         </activity>
         <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape">
         </activity>
