--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,68 +16,46 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" android:label="Sign In to Sales Pad" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.HomeActivity" android:label="Home" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.attendance.AttendanceActivity" android:label="Attendance" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.make_sales_order.MakeSalesOrderActivity" android:label="Make Sales Orders" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.view_sales_order.ViewSalesOrderActivity" android:label="View Sales Orders" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.unproductive_call.UnProductiveCallActivity" android:label="Un Productive Call" android:screenOrientation="portrait">
-        </activity>
+        <activity android:name=".activity.LoginActivity" android:label="Sign In to Sales Pad" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.HomeActivity" android:label="Home" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.attendance.AttendanceActivity" android:label="Attendance" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.make_sales_order.MakeSalesOrderActivity" android:label="Make Sales Orders" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.view_sales_order.ViewSalesOrderActivity" android:label="View Sales Orders" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.unproductive_call.UnProductiveCallActivity" android:label="Un Productive Call" android:screenOrientation="portrait"/>
         <activity android:name=".activity.unproductive_call.MakeUnProductiveCallActivity" android:label="Make Un Productive Call"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.unproductive_call.MadeUnProductiveCallActivity" android:label="Select Un Productive Call"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.unproductive_call.ViewUnProductiveCallActivity" android:label="View Un Productive Call"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.make_sales_order.MakeConsignmentSalesOrderActivity" android:label="Make Consignment Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.make_sales_order.MakeDirectSalesOrderActivity" android:label="Make Direct Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.make_sales_order.MakeProjectSalesOrderActivity" android:label="Make Project Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.make_sales_order.MakeDirectProjectSalesOrderActivity" android:label="Make Direct Project Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.MadeConsignmentSalesOrderActivity" android:label="Select Consignment Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.MadeDirectSalesOrderActivity" android:label="Select Direct Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.MadeProjectSalesOrderActivity" android:label="Select Project Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.ViewConsignmentSalesOrderActivity" android:label="View Consignment Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.ViewDirectSalesOrderActivity" android:label="View Direct Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".activity.view_sales_order.ViewProjectSalesOrderActivity" android:label="View Project Sales Order"
-                  android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.make_sales_order.SelectCategoryActivity" android:label="Select Items" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.make_sales_order.EnterItemDetailActivity" android:label="Enter Item Details" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.attendance.CheckInCheckOutHistory" android:label="Attendance History" android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape">
-        </activity>
-        <activity android:name=".activity.payment.DailyReportActivity" android:label="Distributor wise Outlet Sale" android:screenOrientation="landscape">
-        </activity>
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".activity.make_sales_order.SelectCategoryActivity" android:label="Select Items" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.make_sales_order.EnterItemDetailActivity" android:label="Enter Item Details" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.view_sales_order.ViewItemDetailActivity" android:label="View Item Details" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.attendance.CheckInCheckOutHistory" android:label="Attendance History" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.payment.PaymentActivity" android:label="Payments" android:screenOrientation="landscape"/>
+        <activity android:name=".activity.report.DailyReportActivity" android:label="Outstanding Invoices" android:screenOrientation="landscape"/>
+        <activity android:name=".activity.report.PaymentConfirmationReport" android:label="Payment Confirmation Report" android:screenOrientation="landscape"/>
+        <activity android:name=".activity.report.ChequeRealizationReport" android:label="Cheque Status Report" android:screenOrientation="landscape"/>
+        <activity android:name=".activity.report.OutletWiseSaleReport" android:label="Sales Report" android:screenOrientation="landscape"/>
     </application>
 </manifest>
